--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
       </form>
       <h1><span>Punch</span>Fork</h1>
       <nav>
-        <ul>
-          <li>Log in</li>
-          <li>Sign up</li>
-        </ul>
+        <button class="redButton">Log In</button>
+        <button class="greyButton">Sign up</button>
       </nav>
     </header>
     <main>
@@ -54,15 +52,13 @@
         <article class="sameAuthor">
           <template id="templateShortList">
             <div class="listAuthor">
-              <div>
-                <div class="textImg">
-                  <img src="https://picsum.photos/seed/95/200/200" alt="Cat" />
-                  <h4>Name here</h4>
-                </div>
-                <p>Author</p>
-                <p>Time</p>
-                <p>Rating</p>
+              <div class="textImg">
+                <img src="https://picsum.photos/seed/95/200/200" alt="Cat" />
+                <h4>Name here</h4>
               </div>
+              <p>Author</p>
+              <p>Time</p>
+              <p>Rating</p>
             </div>
           </template>
         </article>
@@ -72,7 +68,7 @@
         <article class="moreLike">
           <template id="templateLongList">
             <div>
-              <div>
+              <div class="textImg">
                 <img src="" alt="Random Images" />
                 <h4>Name here</h4>
               </div>
