more changes (bad day)

--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
             <div class="listAuthor hover">
               <div class="textImg">
                 <img src="https://picsum.photos/seed/95/200/200" alt="Cat" />
-                <h4>Name here</h4>
+                <div class="title">
+                  <h4>Name here</h4>
+                </div>
               </div>
               <div class="info">
                 <p>Author</p>
+                <p>63/100</p>
                 <p>Time</p>
-                <p>Rating</p>
               </div>
             </div>
           </template>
@@ -78,19 +80,43 @@
             <div class="hover">
               <div class="textImg">
                 <img src="" alt="Random Images" />
-                <h4>Name here</h4>
+                <div class="title">
+                  <h4>Name here</h4>
+                </div>
               </div>
               <div class="info">
                 <p>Author</p>
-                <p>Time</p>
                 <p>52/100</p>
+                <p>Time</p>
               </div>
             </div>
           </template>
         </article>
       </section>
     </main>
-    <footer>This is a student project</footer>
+    <footer>
+      <nav>
+        <ul>
+          <li>Lorem</li>
+          <li>Lorem</li>
+          <li>Lorem</li>
+          <li>Lorem</li>
+        </ul>
+        <ul>
+          <li>Lorem</li>
+          <li>Lorem</li>
+          <li>Lorem</li>
+          <li>Lorem</li>
+        </ul>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </nav>
+      <p>This is a student project</p>
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
