--- a/index.html
+++ b/index.html
@@ -96,23 +96,37 @@
     </main>
     <footer>
       <nav>
+        <div class="dontKnow">
+          <div class="blackBox"></div>
+          <p>Lorem ipsum dolor sit amet. Lorem, ipsum.</p>
+        </div>
         <ul>
+          <li><span>Lorem Ipsum</span></li>
           <li>Lorem</li>
           <li>Lorem</li>
           <li>Lorem</li>
           <li>Lorem</li>
         </ul>
         <ul>
+          <li><span>Lorem Ipsum</span></li>
           <li>Lorem</li>
           <li>Lorem</li>
           <li>Lorem</li>
           <li>Lorem</li>
         </ul>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li><span>Lorem Ipsum</span></li>
+          <li>Lorem</li>
+          <li>Lorem</li>
+          <li>Lorem</li>
+          <li>Lorem</li>
+        </ul>
+        <ul>
+          <li><span>Lorem Ipsum</span></li>
+          <li>Lorem</li>
+          <li>Lorem</li>
+          <li>Lorem</li>
+          <li>Lorem</li>
         </ul>
       </nav>
       <p>This is a student project</p>
